토큰 값만 가져오기, 로그인된 유저 정보 가져오기, 댓글/대댓글 관련 등
- JWT 토큰 받아온 값에서 "Bearer " 문자열 제거하여 토큰 값만 가져옴 (포스트맨 가능)
- 댓글/대댓글 관련 기능 로그인 여부 확인
- 로그인된 유저 정보 가져오기 기능
- 댓글/대댓글 작성 시에 로그인된 유저 정보 저장
- 댓글/대댓글 수정, 삭제 시에 작성자와 로그인된 유저 정보 비교

--- a/sorisam/build.gradle
+++ b/sorisam/build.gradle
@@ -28,6 +28,10 @@ dependencies {
     annotationProcessor 'org.projectlombok:lombok'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testImplementation 'org.springframework.security:spring-security-test'
+// Validation
+    implementation 'org.springframework.boot:spring-boot-starter-validation'
+// jwt 라이브러리
+    implementation 'io.jsonwebtoken:jjwt:0.9.1'
 }
 
 tasks.named('test') {
